# mini-alphago

./: README.md
c-version/: CMakeLists.txt  MCTS.cpp  MCTS.h  chessboard.cpp  chessboard.h  glad.c  main.cpp
